--- a/views/case-detail.ejs
+++ b/views/case-detail.ejs
@@ -5,45 +5,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/case-detail.css">
-    <title>Document</title>
+    <%- include('components/meta', { head: meta.cases }); %>
 </head>
 
 <body>
     <%- include('components/header'); -%>
-    <main class="container">
-        <div class="section1 wow text-down" style="animation-delay: 2.4s;">
-            <h1><%= case_name %></h1>
-            <div class="tag ">
-                <span><%= classfiy_id1.classfiy_name %></span>
-                <span><%= classfiy_id2.classfiy_name %></span>
-            </div>
-            <h4><%= case_subname%></h4>
+    <main>
+        <div class="container">
+            <div class="section1 wow text-down" style="animation-delay: 2.4s;">
+                <h1><%= data.case_name %></h1>
+                <div class="tag ">
+                    <span><%= data.classfiy_id1.classfiy_name %></span>
+                    <span><%= data.classfiy_id2.classfiy_name %></span>
+                </div>
+                <h4><%= data.case_subname%></h4>
 
-            <p>
-                <%= case_desc %>
-            </p>
-            <br>
-            <br>
-            <p><%= case_desc %></p>
-            <a href="<%= case_uri %>" class="btn-click project-info magnetic" data-strength="25"
-                data-strength-text="15">
-                <div class="btn-fill"></div>
-                <span class="btn-text">
-                    <span class="btn-text-inner change">项目资料</span>
-                </span>
-            </a>
+                <p>
+                    <%= data.case_desc %>
+                </p>
+                <br>
+                <br>
+                <p><%= data.case_desc %></p>
+                <a href="<%= data.case_uri %>" class="btn-click project-info magnetic" data-strength="25"
+                    data-strength-text="15">
+                    <div class="btn-fill"></div>
+                    <span class="btn-text">
+                        <span class="btn-text-inner change">项目资料</span>
+                    </span>
+                </a>
+            </div>
+            <div class="content">
+                <%- data.content%>
+            </div>
         </div>
-        <div class="content">
-            <%-content%>
-        </div>
+
+        <section class="section4">
+            <div class="medium">
+                <% if (next) { %>
+                <a class="row next-case-btn" style="position: relative;"
+                    href="/<%= user.username %>/case-detail/<%= next.enTitle %>">
+                    <div class="flex-col wow text-down">
+                        <p>下一个作品</p>
+                        <h2><%= next.case_name %></h2>
+                    </div>
+                    <div class="tile-image-wrap">
+                        <div class="tile-image">
+                            <div class="overlay overlay-image lazy entered loaded is-inview"
+                                style="background-image: url('<%= next.case_image %>');">
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <% } %>
+                <div class="row">
+                    <div class="flex-col">
+                        <div class="stripe"></div>
+                    </div>
+                </div>
+                <div class="row wow text-down">
+                    <div class="flex-col" style="display:flex">
+                        <a class="btn-click magnetic project-info" data-strength="25" data-strength-text="15"
+                            href="/<%= user.username %>/cases">
+                            <div class="btn-fill"></div>
+                            <span class="btn-text">
+                                <span class="btn-text-inner change">作品列表 </span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
     <%- include('components/footer'); -%>
     <script>
         $(function () {
-            $('a.top_nav-link[href = "/cases"]').addClass("w--current");
+            $('a.top_nav-link[href *= "/cases"]').addClass("w--current");
             $(".content p").addClass("wow text-down")
+            new WOW().init();
         })
     </script>
 </body>
