--- a/views/css/contact.css
+++ b/views/css/contact.css
@@ -98,9 +98,9 @@ input {
 .button_group {}
 
 .button_group_title {
-    font-size: 18rem;
+    font-size: 18px;
     font-weight: 400;
-    line-height: 19.8rem;
+    line-height: 1.2;
     padding: 20rem 160rem;
 }
 
